<resources>
    <string name="app_name">Books</string>
    <string name="favourite">Favourite</string>
    <string name="description">Description :</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="make_as_favourite">Make As Favourite</string>
    <string name="appwidget_text">Books</string>
    <string name="configure">Configure</string>
...
    <string name="rateOut">Rate :</string>
    <string name="descOut">Description:</string>
    <string name="rateTo">/5</string>
    <string name="pubOut">Publisher:</string>
    <string name="toolbar">Toolbar</string>
    <string name="plzwait">Loading. Please wait...</string>
    <string name="save">Save</string>
    <string name="enter_here">Enter Here</string>
    <string name="typeFilter">books</string>
    <string name="DefaultFilter">love</string>
    <string name="poster">ImagePoster</string>
    <string name="book_title">Book Title</string>
    <string name="booke_sub_title">Booke Sub Title</string>
...
