...
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/txtBook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/enter_here"
...
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtenter" />

    <Button
        android:id="@+id/bTnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginRight="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/colorPrimary"
...
