...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="18sp" />

                <Button
                    android:contentDescription="@string/fav_and_unfav"
                    android:id="@+id/Btn_makeAsFavourite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_favorite_border_black_24dp" />

                <TextView
                    android:id="@+id/makeAsFavourite"
...
