<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favourite"
        android:visible="true"
        app:iconTint="@color/colorTexts"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        android:visible="true"
        app:iconTint="@color/colorTexts"
        app:showAsAction="never" />
</menu>
